# SimText

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test1.txt  test2.txt  test3.txt  test4.txt
include/: document_analyzer.hpp  shingling.hpp  similarity_calculator.hpp  text_processor.hpp
src/: document_analyzer.cpp  main.cpp  shingling.cpp  similarity_calculator.cpp  text_processor.cpp
tests/: test_similarity.cpp
